feat: Integrate Tiptap rich text editor
Adds Tiptap rich text editor for enhanced content creation and editing. This includes:

- Installing necessary Tiptap packages.
- Configuring the editor with StarterKit and Link extension.
- Implementing basic toolbar controls for formatting (bold, italic, headings, lists, blockquotes, links).
- Defining editor styles to match application theme and provide a good user experience.
- Updating the Post Generator page to utilize the new editor for post content.
- Enhancing the `performResearch` service to include trend analysis and structured output.
- Updating type definitions to accommodate the new research output.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
@@ -25,7 +26,11 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "clsx": "https://cdn.jsdelivr.net/npm/clsx@2.1.1/+esm",
     "tailwind-merge": "https://cdn.jsdelivr.net/npm/tailwind-merge@2.3.0/+esm",
-    "next/": "https://aistudiocdn.com/next@^16.0.3/"
+    "next/": "https://aistudiocdn.com/next@^16.0.3/",
+    "@tiptap/core": "https://esm.sh/@tiptap/core@2.2.4",
+    "@tiptap/react": "https://esm.sh/@tiptap/react@2.2.4?external=react,react-dom",
+    "@tiptap/starter-kit": "https://esm.sh/@tiptap/starter-kit@2.2.4",
+    "@tiptap/extension-link": "https://esm.sh/@tiptap/extension-link@2.2.4"
   }
 }
 </script>
